--- a/static/readme.html
+++ b/static/readme.html
@@ -23,10 +23,10 @@
 </ol>
 
 <h2>Use-Case Diagram</h2>
-<img src="images/readme/use-case.drawio.png" alt="Use-Case Diagram">
+<svg src="images/readme/use-case.drawio.png" alt="Use-Case Diagram">
 
 <h2>BPMN Диаграмма Основных Бизнес-процессов</h2>
-<img src="images/readme/bmpn.png" alt="BPMN Diagram">
+<img src="images/readme/bmpn.svg" alt="BPMN Diagram">
 
 <h2>Диаграмма БД</h2>
 <img src="images/readme/entity-relation-ship-diagram.png" alt="Entity-Relationship Diagram">
